--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body {
 color: white;
 background: black;
 }
+
+header {
+border-bottom: solid 2px rgb(42, 122, 228);
+padding: 20px;
+font-size: 32px;
+color: rgb(0, 0, 0);
+}
+
+section {
+background: rgb(184, 156, 213);
+}
